--- a/ejemplo/templates/saludar.html
+++ b/ejemplo/templates/saludar.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    HOLA ESTO ES UN SALUDO DESDE UN TEMPLATE!!!!
+    HOLA ESTO ES UN SALUDO DESDE UN TEMPLATE!!!! {{nombre}}, {{apellido}}
+
+    
 </body>
 </html>
